# Systems

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  engine.cpp  engine.h  graphics.cpp  graphics.h  idrawable.h  input.cpp  input.h  keybinds.cpp  keybinds.h  main.cpp  star.cpp  star.h  starsystem.cpp  starsystem.h  util.cpp  util.h
gameobjects/: entity.cpp  entity.h  gameobject.cpp  gameobject.h  player.cpp  player.h
